--- a/0.yuke/A/index.html
+++ b/0.yuke/A/index.html
@@ -5,10 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/demo1.js"></script>
+    <style>
+        li {
+            font-size: 24px;
+        }
+    </style>
 </head>
 
 <body>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+    </ul>
+    <script src="js/demo4.js"></script>
 
 </body>
 
