--- a/topic1/exam/index.html
+++ b/topic1/exam/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/demo5.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="js/demo8.js"></script>
 </head>
 
 <body>
-
+    <button id="test" type="button">11
+        </button>
 </body>
 
 </html>
