--- a/topic1/exam/index.html
+++ b/topic1/exam/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
-    <script src="js/demo8.js"></script>
+    <script src="js/demo11.js"></script>
 </head>
 
 <body>
-    <button id="test" type="button">11
-        </button>
+    <!-- <button id="test" type="button">11
+        </button> -->
 </body>
 
 </html>
