--- a/dayly/index.html
+++ b/dayly/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="2-5.js"></script>
+    <script src="./2-9.js"></script>
 </head>
 
 <body>
